--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "start:dev": "ng serve --port 3000",
     "test": "ng test",
-    "cypress:run": "start-server -s 3000 -n \"npm run start:dev\" && cypress run"
+    "cypress:run": "start-test -s 3000 -n \"npm run start:dev\" && cypress run"
   },
   "private": true,
   "dependencies": {
@@ -37,7 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2",
-    "start-server-and-test": "^2.0.3"
+    "start-server-and-test": "^2.0.10",
+    "typescript": "~5.6.2"
   }
 }
