--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "start:dev": "ng serve --port 3000",
     "test": "ng test",
-    "cypress:run": "node_modules/.bin/start-server start:dev 3000 cypress run"
+    "start-server": "npm start",
+    "cypress:run": "start-server start:dev 3000 cypress run"
   },
   "private": true,
   "dependencies": {
