--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "start:dev": "ng serve --port 3000",
     "test": "ng test",
-    "start-server": "npm start",
-    "cypress:run": "start-server start:dev 3000 cypress run"
+    "cypress:run": "npm start start:dev 3000 cypress run"
   },
   "private": true,
   "dependencies": {
